@@ -36,6 +36,7 @@
  */
 
 extern int stack_end;
+extern int sram_end;
 extern int TBLPTRU;
 extern int TBLPTRH;
 extern int TBLPTRL;
@@ -107,10 +108,8 @@ _startup (void) __naked
     bcf     0xa6, 6, a      ; EECON1.CFGS  = 0, TBLPTR accesses program memory
 
   /* cleanup the RAM */
-    ; Load FSR0 with top of RAM.
-    setf    _FSR0L, a
-    movlw   0x0e
-    movwf   _FSR0H, a
+    ; Load FSR0 with top of SRAM.
+    lfsr    0, _sram_end
 
     ; Place 0xff at address 0x00 as a sentinel.
     setf    0x00, a
